@@ -75,14 +75,19 @@ Changes in detail
 - Added CDC::CreatePalette
 - Added CDC::CreateHalftonePalette
 - Added CDC::DetachPalette
+- Added CDC::GetBitmap
 - Added CDC::GetBitmapInfo
+- Added CDC::GetBrusg
 - Added CDC::GetBrushInfo
+- Added CDC::GetFont
 - Added CDC::GetFontInfo
+- Added CDC::GetPen
 - Added CDC::GetPenInfo
 - Added CDC::ExtSelectClipRgn
 - Added CDC::ExcludeClipRect
 - Added CDC::GetClipBox	
-- Added CDC::GetClipRgn		
+- Added CDC::GetClipRgn
+- Added CDC::GetRgn		
 - Added CDC::IntersectClipRect
 - Added CDC::OffsetClipRgn
 - Added CDC::PtVisible
